src/a12/a12.h

struct a12_state;
struct pk_response {
	bool authentic;
	uint8_t key_pub[32];
	uint8_t key_session[32];
	int (*state_access)(
		const uint8_t pub[static 32], const char* name, size_t sz, const char* mode);
};
struct a12_dynreq {
	char host[46];
	char pubk[32];
	uint16_t port;
	char authk[12];
	int proto;
};
enum server_appl {
	SERVER_APPL_NONE = 0,
	SERVER_APPL_TEMP = 1,
	SERVER_APPL_PRIMARY = 2
};
struct appl_meta;
struct appl_meta {
	FILE* handle;
	char* buf;
	uint64_t buf_sz;
	uint8_t server_appl;
	void* server_tag;
	struct appl_meta* next;
	uint16_t identifier;
	uint16_t categories;
	uint16_t permissions;
	uint8_t hash[4];
	struct {
		char name[18];
		char short_descr[69];
	} appl;
	uint64_t update_ts;
};
struct a12_context_options {
	struct pk_response (*pk_lookup)(struct a12_state* S, uint8_t pub[static 32], void*);
	void* pk_lookup_tag;
	uint8_t priv_key[32];
	bool disable_ephemeral_k;
	char secret[32];
	int local_role;
	size_t rekey_bytes;
	bool allow_directory_link;
	bool (*sink)(uint8_t* buf, size_t buf_sz, void* tag);
	void* sink_tag;
};
void a12_unpack(
	struct a12_state*, const uint8_t*, size_t, void* tag, void (*on_event)
		(struct arcan_shmif_cont* cont, int chid, struct arcan_event*, void*));
enum a12_blob_mode {
	A12_FLUSH_NOBLOB = 0,
	A12_FLUSH_CHONLY,
	A12_FLUSH_ALL
};
enum a12_bstream_type {
	A12_BTYPE_STATE = 0,
	A12_BTYPE_FONT = 1,
	A12_BTYPE_FONT_SUPPL = 2,
	A12_BTYPE_BLOB = 3,
	A12_BTYPE_CRASHDUMP = 4,
	A12_BTYPE_APPL = 5,
	A12_BTYPE_APPL_RESOURCE = 6,
	A12_BTYPE_APPL_CONTROLLER = 7
};
enum authentic_state {
	AUTH_UNAUTHENTICATED   = 0, 
	AUTH_SERVER_HBLOCK     = 1, 
	AUTH_POLITE_HELLO_SENT = 2, 
	AUTH_EPHEMERAL_PK      = 3, 
	AUTH_REAL_HELLO_SENT   = 4, 
	AUTH_FULL_PK           = 5, 
};
enum self_roles {
	ROLE_NONE   = 0, 
	ROLE_SOURCE = 1,
	ROLE_SINK   = 2,
	ROLE_PROBE  = 3, 
	ROLE_DIR    = 4
};
enum trace_groups {
	A12_TRACE_VIDEO = 1,
	A12_TRACE_AUDIO = 2,
	A12_TRACE_SYSTEM = 4,
	A12_TRACE_EVENT = 8,
	A12_TRACE_TRANSFER = 16,
	A12_TRACE_DEBUG = 32,
	A12_TRACE_MISSING = 64,
	A12_TRACE_ALLOC = 128,
	A12_TRACE_CRYPTO = 256,
	A12_TRACE_VDETAIL = 512,
	A12_TRACE_BTRANSFER = 1024,
	A12_TRACE_SECURITY = 2048,
	A12_TRACE_DIRECTORY = 4096,
};
enum a12_vframe_method {
	VFRAME_METHOD_DEFER = -1, 
	VFRAME_METHOD_NORMAL = 0, 
	VFRAME_METHOD_RAW_NOALPHA = 1,
	VFRAME_METHOD_RAW_RGB565 = 2,
	VFRAME_METHOD_H264 = 5,
	VFRAME_METHOD_TPACK_ZSTD = 7,
	VFRAME_METHOD_ZSTD = 8,
	VFRAME_METHOD_DZSTD = 9
};
enum a12_stream_types {
	STREAM_TYPE_VIDEO = 0,
	STREAM_TYPE_AUDIO = 1,
	STREAM_TYPE_BINARY = 2
};
enum a12_vframe_compression_bias {
	VFRAME_BIAS_LATENCY = 0,
	VFRAME_BIAS_BALANCED,
	VFRAME_BIAS_QUALITY,
};
enum a12_vframe_postprocess {
	VFRAME_POSTPROCESS_SRGB = 1,
	VFRAME_POSTPROCESS_ORIGO_LL = 2
};
struct a12_vframe_opts {
	enum a12_vframe_method method;
	enum a12_vframe_compression_bias bias;
	enum a12_vframe_postprocess postprocess;
	int ratefactor; 
	size_t bitrate; 
};
enum a12_aframe_method {
	AFRAME_METHOD_RAW = 0,
};
struct a12_aframe_opts {
	enum a12_aframe_method method;
};
struct a12_aframe_cfg {
	uint8_t channels;
	uint32_t samplerate;
};
enum a12_bhandler_flag {
	A12_BHANDLER_CACHED = 0,
	A12_BHANDLER_NEWFD,
	A12_BHANDLER_DONTWANT,
	A12_BHANDLER_NEWFD_NOCOMPRESS
};
enum a12_bhandler_state {
	A12_BHANDLER_CANCELLED = 0,
	A12_BHANDLER_COMPLETED,
	A12_BHANDLER_INITIALIZE
};
enum stream_cancel {
	STREAM_CANCEL_DONTWANT = 0,
	STREAM_CANCEL_DECODE_ERROR = 1,
	STREAM_CANCEL_KNOWN = 2
};
bool a12_request_dynamic_resource(
	struct a12_state* S,
	uint8_t ident_pubk[static 32],
	bool prefer_tunnel,
	void(*request_reply)(struct a12_state*, struct a12_dynreq, void* tag),
	void* tag);