src/a12/a12_types.zig


// Supporting small event payloads (system/video/audio/fsrv) used inside
// `arcan_event`. Only the minimum accessible from a12 consumers is defined.
pub const arcan_sevent = extern struct {
    kind: c_uint = 0,
    errcode: c_int = 0,
    unnamed_0: extern union {
        tagv: extern struct { hitag: u32 = 0, lotag: u32 = 0 },
        mesg: extern struct { dyneval_msg: ?[*:0]u8 = null },
        data: extern struct { fd: c_int = 0, _pad: [4]u8 = .{ 0, 0, 0, 0 }, otag: isize = 0 },
        message: [64]u8,
    } = .{ .message = std.mem.zeroes([64]u8) },
};
pub const arcan_vevent = extern struct {
    kind: c_int = 0,
    _pad_kind: [4]u8 = .{ 0, 0, 0, 0 },
    source: i64 = 0,
    unnamed_0: extern union {
        unnamed_0: extern struct { width: i16 = 0, height: i16 = 0, flags: c_int = 0, vppcm: f32 = 0, displayid: c_int = 0, ledctrl: c_int = 0, ledid: c_int = 0, cardid: c_int = 0 },
        slot: c_int,
    } = .{ .slot = 0 },
    data: isize = 0,
};
pub const arcan_aevent = extern struct {
    kind: c_int = 0,
    _pad_kind: [4]u8 = .{ 0, 0, 0, 0 },
    source: i32 = 0,
    _pad_source: [4]u8 = .{ 0, 0, 0, 0 },
    unnamed_0: extern union { otag: isize, data: [*c]usize } = .{ .otag = 0 },
};

/// arcan_event — re-exported from shmif_types so cross-module callers (a12,
/// anet, shmif) share one Zig type for the tagged-union event payload.
pub const arcan_event = shmif.arcan_event;
pub const struct_arcan_event = shmif.struct_arcan_event;

// ══════════════════════════════════════════════════════════════════════════════
// Section 4: a12.h — struct pk_response / a12_dynreq / appl_meta
// ══════════════════════════════════════════════════════════════════════════════

/// struct pk_response — filled in by `pk_lookup` to authorize a peer.
pub const pk_response = extern struct {
    authentic: bool = false,
    _pad0: [7]u8 = .{ 0, 0, 0, 0, 0, 0, 0 },
    key_pub: [32]u8 = std.mem.zeroes([32]u8),
    key_session: [32]u8 = std.mem.zeroes([32]u8),
    state_access: ?*const fn (pub_key: *const [32]u8, name: [*:0]const u8, sz: usize, mode: [*:0]const u8) callconv(.c) c_int = null,
};
pub const struct_pk_response = pk_response;

/// struct a12_dynreq — reply payload for a directory-open request.
pub const a12_dynreq = extern struct {
    host: [46]u8 = std.mem.zeroes([46]u8),
    pubk: [32]u8 = std.mem.zeroes([32]u8),
    port: u16 = 0,
    authk: [12]u8 = std.mem.zeroes([12]u8),
    proto: c_int = 0,
    local_private_key: [32]u8 = std.mem.zeroes([32]u8),
};
pub const struct_a12_dynreq = a12_dynreq;

/// struct appl_meta — directory-mode appl entry, linked list.
pub const appl_meta = extern struct {
    handle: ?*anyopaque = null, // FILE*
    buf: ?[*]u8 = null,
    buf_sz: u64 = 0,
    server_appl: u8 = 0,
    _pad0: [7]u8 = .{ 0, 0, 0, 0, 0, 0, 0 },
    server_tag: ?*anyopaque = null,
    next: ?*appl_meta = null,
    identifier: u16 = 0,
    categories: u16 = 0,
    permissions: u16 = 0,
    hash: [4]u8 = .{ 0, 0, 0, 0 },
    sig_pubk: [32]u8 = std.mem.zeroes([32]u8),
    alias_identifier: u16 = 0,
    _pad1: [6]u8 = .{ 0, 0, 0, 0, 0, 0 },
    appl: extern struct {
        name: [18]u8 = std.mem.zeroes([18]u8),
        short_descr: [69]u8 = std.mem.zeroes([69]u8),
    } = .{},
    _pad2: [1]u8 = .{0},
    update_ts: u64 = 0,
};
pub const struct_appl_meta = appl_meta;

// ══════════════════════════════════════════════════════════════════════════════
// Section 5: a12.h — struct a12_context_options
// ══════════════════════════════════════════════════════════════════════════════

pub const PkLookupFn = *const fn (
    S: [*c]a12_state,
    pub_key: [*c]u8,
    tag: ?*anyopaque,
) callconv(.c) pk_response;

pub const SinkFn = *const fn (
    buf: [*]u8,
    buf_sz: usize,
    tag: ?*anyopaque,
) callconv(.c) bool;

pub const EncSinkFn = *const fn (
    buf: [*]u8,
    buf_sz: usize,
    method: c_int,
    flags: c_int,
    tag: ?*anyopaque,
) callconv(.c) void;

pub const a12_context_options = extern struct {
    pk_lookup: ?PkLookupFn = null,
    pk_lookup_tag: ?*anyopaque = null,
    priv_key: [32]u8 = std.mem.zeroes([32]u8),
    disable_ephemeral_k: bool = false,
    _pad0: [7]u8 = .{ 0, 0, 0, 0, 0, 0, 0 },
    secret: [32]u8 = std.mem.zeroes([32]u8),
    local_role: c_int = 0,
    _pad_role: [4]u8 = .{ 0, 0, 0, 0 },
    rekey_bytes: usize = 0,
    checksum_cap_mb: usize = 0,
    pqc_rekey: bool = false,
    allow_directory_link: bool = false,
    _pad1: [6]u8 = .{ 0, 0, 0, 0, 0, 0 },
    sink: ?SinkFn = null,
    sink_tag: ?*anyopaque = null,
    enc_sink: ?EncSinkFn = null,
    enc_sink_tag: ?*anyopaque = null,
    // _DEBUG fields (disable_cia / record_raw) omitted — release builds only.
};
pub const struct_a12_context_options = a12_context_options;

// ══════════════════════════════════════════════════════════════════════════════
// Section 6: a12.h — enum a12_bstream_type
// ══════════════════════════════════════════════════════════════════════════════

pub const a12_bstream_type = c_uint;
pub const enum_a12_bstream_type = a12_bstream_type;

pub const A12_BTYPE_STATE: a12_bstream_type = 0;
pub const A12_BTYPE_FONT: a12_bstream_type = 1;
pub const A12_BTYPE_FONT_SUPPL: a12_bstream_type = 2;
pub const A12_BTYPE_BLOB: a12_bstream_type = 3;
pub const A12_BTYPE_CRASHDUMP: a12_bstream_type = 4;
pub const A12_BTYPE_APPL: a12_bstream_type = 5;
pub const A12_BTYPE_APPL_RESOURCE: a12_bstream_type = 6;
pub const A12_BTYPE_APPL_CONTROLLER: a12_bstream_type = 7;
pub const A12_BTYPE_METADATA: a12_bstream_type = 8;

// ══════════════════════════════════════════════════════════════════════════════
// Section 7: a12.h — enum a12_blob_mode
// ══════════════════════════════════════════════════════════════════════════════

pub const a12_blob_mode = c_uint;

pub const A12_FLUSH_NOBLOB: a12_blob_mode = 0;
pub const A12_FLUSH_CHONLY: a12_blob_mode = 1;
pub const A12_FLUSH_ALL: a12_blob_mode = 2;

// ══════════════════════════════════════════════════════════════════════════════
// Section 8: a12.h — enum authentic_state
// ══════════════════════════════════════════════════════════════════════════════

pub const authentic_state = c_uint;

pub const AUTH_UNAUTHENTICATED: authentic_state = 0;
pub const AUTH_SERVER_HBLOCK: authentic_state = 1;
pub const AUTH_POLITE_HELLO_SENT: authentic_state = 2;
pub const AUTH_EPHEMERAL_PK: authentic_state = 3;
pub const AUTH_REAL_HELLO_SENT: authentic_state = 4;
pub const AUTH_FULL_PK: authentic_state = 5;

// ══════════════════════════════════════════════════════════════════════════════
// Section 9: a12.h — enum self_roles
// ══════════════════════════════════════════════════════════════════════════════

pub const self_roles = c_uint;

pub const ROLE_NONE: self_roles = 0;
pub const ROLE_SOURCE: self_roles = 1;
pub const ROLE_SINK: self_roles = 2;
pub const ROLE_PROBE: self_roles = 3;
pub const ROLE_DIR: self_roles = 4;
pub const ROLE_DIRREF: self_roles = 5;

// ══════════════════════════════════════════════════════════════════════════════
// Section 10: a12.h — enum server_appl
// ══════════════════════════════════════════════════════════════════════════════

pub const server_appl = c_uint;

pub const SERVER_APPL_NONE: server_appl = 0;
pub const SERVER_APPL_TEMP: server_appl = 1;
pub const SERVER_APPL_PRIMARY: server_appl = 2;

// ══════════════════════════════════════════════════════════════════════════════
// Section 11: a12.h — enum stream_cancel
// ══════════════════════════════════════════════════════════════════════════════

pub const stream_cancel = c_uint;

pub const STREAM_CANCEL_DONTWANT: stream_cancel = 0;
pub const STREAM_CANCEL_DECODE_ERROR: stream_cancel = 1;
pub const STREAM_CANCEL_KNOWN: stream_cancel = 2;

// ══════════════════════════════════════════════════════════════════════════════
// Section 12: a12.h — enum trace_groups
// ══════════════════════════════════════════════════════════════════════════════

pub const A12_TRACE_VIDEO: c_int = 1;
pub const A12_TRACE_AUDIO: c_int = 2;
pub const A12_TRACE_SYSTEM: c_int = 4;
pub const A12_TRACE_EVENT: c_int = 8;
pub const A12_TRACE_TRANSFER: c_int = 16;
pub const A12_TRACE_DEBUG: c_int = 32;
pub const A12_TRACE_MISSING: c_int = 64;
pub const A12_TRACE_ALLOC: c_int = 128;
pub const A12_TRACE_CRYPTO: c_int = 256;
pub const A12_TRACE_VDETAIL: c_int = 512;
pub const A12_TRACE_BTRANSFER: c_int = 1024;
pub const A12_TRACE_SECURITY: c_int = 2048;
pub const A12_TRACE_DIRECTORY: c_int = 4096;

// ══════════════════════════════════════════════════════════════════════════════
// Section 13: a12.h — enum a12_vframe_*, a12_aframe_*
// ══════════════════════════════════════════════════════════════════════════════

pub const a12_vframe_method = c_int;

pub const VFRAME_METHOD_DEFER: a12_vframe_method = -1;
pub const VFRAME_METHOD_NORMAL: a12_vframe_method = 0;
pub const VFRAME_METHOD_RAW_NOALPHA: a12_vframe_method = 1;
pub const VFRAME_METHOD_RAW_RGB565: a12_vframe_method = 2;
pub const VFRAME_METHOD_H264: a12_vframe_method = 5;
pub const VFRAME_METHOD_TPACK_ZSTD: a12_vframe_method = 7;
pub const VFRAME_METHOD_ZSTD: a12_vframe_method = 8;
pub const VFRAME_METHOD_DZSTD: a12_vframe_method = 9;

pub const a12_vframe_compression_bias = c_uint;

pub const VFRAME_BIAS_LATENCY: a12_vframe_compression_bias = 0;
pub const VFRAME_BIAS_BALANCED: a12_vframe_compression_bias = 1;
pub const VFRAME_BIAS_QUALITY: a12_vframe_compression_bias = 2;

pub const a12_vframe_postprocess = c_uint;

pub const VFRAME_POSTPROCESS_SRGB: a12_vframe_postprocess = 1;
pub const VFRAME_POSTPROCESS_ORIGO_LL: a12_vframe_postprocess = 2;

pub const a12_aframe_method = c_uint;

pub const AFRAME_METHOD_RAW: a12_aframe_method = 0;

pub const a12_stream_types = c_uint;

pub const STREAM_TYPE_VIDEO: a12_stream_types = 0;
pub const STREAM_TYPE_AUDIO: a12_stream_types = 1;
pub const STREAM_TYPE_BINARY: a12_stream_types = 2;

/// struct a12_vframe_opts — encoder options for a single video frame.
pub const a12_vframe_opts = extern struct {
    method: a12_vframe_method = VFRAME_METHOD_DEFER,
    bias: a12_vframe_compression_bias = VFRAME_BIAS_LATENCY,
    postprocess: a12_vframe_postprocess = 0,
    ratefactor: c_int = 0,
    bitrate: usize = 0,
    force_idr: bool = false,
    _pad0: [7]u8 = .{ 0, 0, 0, 0, 0, 0, 0 },
    result_feedback: ?*const fn (buf: [*]u8, buf_sz: usize, tag: ?*anyopaque) callconv(.c) void = null,
};
pub const struct_a12_vframe_opts = a12_vframe_opts;

pub const a12_aframe_opts = extern struct {
    method: a12_aframe_method = 0,
};
pub const struct_a12_aframe_opts = a12_aframe_opts;

pub const a12_aframe_cfg = extern struct {
    channels: u8 = 0,
    _pad0: [3]u8 = .{ 0, 0, 0 },
    samplerate: u32 = 0,
};
pub const struct_a12_aframe_cfg = a12_aframe_cfg;

// ══════════════════════════════════════════════════════════════════════════════
// Section 14: a12.h — struct a12_bhandler_{meta,res}, enum a12_bhandler_*
// ══════════════════════════════════════════════════════════════════════════════

pub const a12_bhandler_flag = c_uint;

pub const A12_BHANDLER_CACHED: a12_bhandler_flag = 0;
pub const A12_BHANDLER_NEWFD: a12_bhandler_flag = 1;
pub const A12_BHANDLER_DONTWANT: a12_bhandler_flag = 2;
pub const A12_BHANDLER_NEWFD_NOCOMPRESS: a12_bhandler_flag = 3;

pub const a12_bhandler_state = c_uint;

pub const A12_BHANDLER_CANCELLED: a12_bhandler_state = 0;
pub const A12_BHANDLER_COMPLETED: a12_bhandler_state = 1;
pub const A12_BHANDLER_INITIALIZE: a12_bhandler_state = 2;
